# zap-prettier

./: Cargo.toml  README.md  tests.sh
src/: go_test_parser.rs  main.rs  zap_parser.rs
tests/: go_tests.sh  print-to-stderr.sh  prints-all-kinds-logger.sh  prints-all-kinds.sh  prints-and-errors.sh  prints-empty-between-non-empty.sh
